Spellcheck index.html, attached colors

--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,15 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+
+#tokyo {
+    background-color: #3df455;
+}
+
+#planet {
+    background-color: #aa32ff;
+}
+
+#france {
+    background-color: #0023ff;
+}   
